--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
         jwt:
           issuer-uri: http://localhost:8081/realms/SpringK
           jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+  redis:
+    host: localhost
+  data:
+    redis:
+      port: 6379
 
 jwt:
   auth:
@@ -16,9 +21,26 @@ jwt:
 
 logging:
   level:
-    org.springframework.security: DEBUG
+    com.skey: DEBUG
+  file:
+    path: d:/workspace/prometheus_grafana/log
 
+management:
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+    metrics:
+      enabled: true
+    prometheus:
+      enabled: true
 server:
   port: '8080'
-  servlet:
-    context-path: /api
+info:
+  app:
+    website: 'springkey'
+    version: 1
